fix: id:50162 pagination next/prev button alignment

--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -193,7 +193,7 @@ TODO : Should we be specifying font size here and in button component?  seems to
     border-radius: 6px;
     list-style: none;
     min-width: 28px;
-    height: 28px;
+    height: 38px;
     line-height: 28px;
     // float: left;
     text-align: center;
